MORE capitalisation fixes
- recursive now to finally deal with quotes without having actually to deal with them
- fixed up the testing class to create tests automatically by randomisation instead of having to do stuff like code multiple tests over and over again; also included pass statistics.
- added some more tests.
- really long process to create and debug a regular expression to find things within quotes with any meaningful degree of accuracy.
- documentation fixes
- use capitalisation function in RqCategories; standardise on Apache Commons Text